tests/semantic/pass/nil-5.tiger
let
	type a = {}
	var b : a := nil
in
end
