tests/semantic/fail/record-wrong-fields-1.tiger
let
      type vector = {x : int, y : int}
      var x := vector {x = 1, y = 1, z = 1}
in
end
